@@ -1,6 +1,8 @@
 Revision history for App-Anchr
 
 {{$NEXT}}
+    - Rename `anchr merge` to `anchr contained`
+    - Simplify anchor.sh
 
 0.0.18 2017-03-02T12:24:38Z
     - `anchr merge`
